--- a/templates/formpage.html
+++ b/templates/formpage.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block head %}
+<style>
+    body{color:rgb(29, 9, 145);}
+</style>
+   {% endblock %}
 {% block title %} Image To Text {% endblock %}
 {% block content %}
         <div class="container">
