--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block head %}
+<style>
+    body{color:white;}
+</style>
+   {% endblock %} 
 {% block title %} Login {% endblock %}
+{% block content %}
 <h1>You are logged out successfully.Come back Soon!</h1>
 {% endblock %}
