--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,30 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% load static %}
+{% block head %}
+<style>
+    body{color:white;}
+</style>
+   {% endblock %} 
+
 {% block title %} Register {% endblock %}
+{% block content %}
+<div class="container">
+    <br>
+    <h2>Register On Taskmate</h2>
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+            {{ message}}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    
+        {% endfor %}
+        {% endif %}
+        <form method="POST" class="mt-3 col-6">
+            {% csrf_token %}
+            {{ register_form|crispy }}
+        <button class="btn btn-primary mb-5" type="submit">Register</button>
+        </form>
+    </div>
 {% endblock %}
