--- a/templates/formpage.html
+++ b/templates/formpage.html
@@ -21,7 +21,7 @@
                 <h1 class="text-center fw-bolder" style ="font-style: oblique;font-family : 'Brush Script MT', cursive;">
                     Ocr of an Image
                 </h1>
-                <form method ="POST">
+                <form method ="POST" enctype=multipart/form-data>
                     {% csrf_token %}
                     <div class="row mb-3">
 
