--- a/templates/formpage.html
+++ b/templates/formpage.html
@@ -10,11 +10,10 @@
         <div class="container">
             <div class=mt-5>
             <div class="form-container">
-
-                <div class="alert alert-info alert-dismissible fade show" role="alert">
-                 {{ message}}
-                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
+                <p style="color: red;">{{message}}</p>
+                <h1>
+                    Ocr an Image and Summarize Using Gensim
+                </h1>
                 <h1 class="text-center fw-bolder" style ="font-style: oblique;font-family : 'Brush Script MT', cursive;">
                     Ocr of an Image
                 </h1>
